@@ -23,6 +23,7 @@ import com.jgoodies.forms.layout.CellConstraints;
 import com.jgoodies.forms.layout.FormLayout;
 
 import de.erdesignerng.util.ApplicationPreferences;
+import de.mogwai.common.client.looks.UIInitializer;
 import de.mogwai.common.client.looks.components.DefaultButton;
 
 public class PreferencesEditorView extends JPanel {
@@ -53,11 +54,14 @@ public class PreferencesEditorView extends JPanel {
         setLayout(theLayout);
 
         CellConstraints cons = new CellConstraints();
-
+        
+        UIInitializer.getInstance().initialize(this);
         add(preferences, cons.xy(2, 2));
 
         JPanel thePanel = new JPanel();
-
+        UIInitializer.getInstance().initialize(thePanel);
+        
+        
         theColDef = "60dlu,2dlu:grow,60dlu";
         theRowDef = "p";
 
